--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,7 @@ p{
 /**********************************************************
 					FORM CODE	
 **********************************************************/
+/*this is form code*/
 .fldSet{
 	border:none;
 	width:500px;
@@ -199,6 +200,7 @@ p{
 	margin:0;
 	border:1px solid #666;
 	padding:0 5px 0 5px;
+	/*this is input*/
 }
 .txtArea{
 	width:346px;
