--- a/css/style.css
+++ b/css/style.css
@@ -246,3 +246,28 @@ p{
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 }*/
+.ingi{
+	width: 50px;
+	height: 50px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	background: lightgreen;
+	float: right;
+}
+.dot{
+	height: 10px;
+	width: 10px;
+	border-radius: 5px;
+	margin: 10px auto;
+	background: #fff;
+	display: block;
+}
+.line{
+	height: 30px;
+	width: 10px;
+	border-radius: 5px;
+	margin: 3px auto;
+	background: #fff;
+	display: block;
+}
